# pony-gen

./: .gitignore  .pep8  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.py
src/: __main__.py  base.py  cli.py  db.py  mysql.py  pony_gen_v2.py  postgres.py  sanitize_column_name.py  sqlite.py  utils.py
